# neural_nets

./: main.py  micrograd_from_scratch_fy.ipynb  pyproject.toml
.ipynb_checkpoints/: micrograd_from_scratch_fy-checkpoint.ipynb
makemore/: build_makemore_manual_backprop.ipynb  build_makemore_mlp2_fy.ipynb  build_makemore_mlp_fy.ipynb  makemore_from_scratch_fy.ipynb
makemore/.ipynb_checkpoints/: build_makemore_manual_backprop-checkpoint.ipynb  build_makemore_mlp2_fy-checkpoint.ipynb  build_makemore_mlp_fy-checkpoint.ipynb  makemore_from_scratch_fy-checkpoint.ipynb
micrograd/: micrograd_from_scratch_fy.ipynb
micrograd/.ipynb_checkpoints/: micrograd_from_scratch_fy-checkpoint.ipynb
